[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A set of 5 simple games to improve your mathematics abilities"
authors = ["Ivan Granovsky <ivanator666@gmail.com>"]
readme = "README.md"
packages = [
    { include = "brain_games" },
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment :: Puzzle Games"
]
repository = "https://github.com/Midnight95/python-project-49.git"

[tool.poetry.dependencies]
python = "^3.10.9"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
